--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="top-wrapper">
       <div class="container">
         <h1>HELLO!</h1>
-        <h1>WELCOME TO WEB TECHS.</h1>
+        <h1>WELCOME TO WEBDEV.</h1>
         <p>We design and build user interface for your webpage.</p>
         <p>In a sea of ordinary make sure your business website stand out from the rest.</p>
         <div class="btn-wrapper">
