--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="header-right">
           <a href="#">About us</a>
           <a href="#">Sign in</a>
-          <a href="#" class="login">Log in</a>
+          <a href="#">Log in</a>
         </div>
       </div>
     </header>
